# HandmadeHero

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  handmade.cpp  handmade.h  win32_handmade.cpp
scripts/: shell.bat
src/: handmade.cpp  handmade.h  win32_handmade.cpp  win32_handmade.h
