cmake_minimum_required(VERSION 3.3)
project(HandmadeHero)
#set(PROJECT_SOURCE_DIR code)
#set(SOURCE_FILES code)
#include_directories("${PROJECT_SOURCE_DIR}")
add_definitions(-DHANDMADE_INTERNAL=1 -DHANDMADE_SLOW=1 -DHANDMADE_WIN32=1)
#set(SOURCE_FILES win32_handmade.cpp handmade.cpp)
add_executable(win32_handmade win32_handmade.cpp)
#add_executable(win32_handmade ${SOURCE_FILES})
